# CalcRace

./: .gitignore  Makefile  README.md  TODO.md  meson.build  wasm-cross.txt
img/: meson.build
img_conv/: ask.h  border_curve1.h  border_curve2.h  border_curve3.h  border_curve4.h  border_horizontal1.h  border_horizontal2.h  border_vertical1.h  border_vertical2.h  bush1.h  car1.h  car2.h  car3.h  car4.h  car5.h  car6.h  car7.h  car8.h  coin.h  coin1.h  coin2.h  coin3.h  color_change1.h  color_change2.h  color_change3.h  color_change4.h  cube.h  curve_middle1.h  curve_middle2.h  curve_middle3.h  curve_middle4.h  endline.h  favicon.h  grass1.h  grass2.h  lake_border1.h  lake_border2.h  lake_border3.h  lake_border4.h  little_tree.h  (+1 more)
inc/: calc.h  extra_collisions.h  fonts.h  game.h  graphics.h  keyboard.h  map.h  memory.h  player.h  text.h  tileconfig.h  tiles.h  touch.h  worlds.h
inc/maps/: map1_1.h  map1_3.h  map1_4.h  map2_2.h  map3_1.h
lib/: audio.c  audio.h  canvas.c  canvas.h  image.c  image.h  meson.build
src/: CalcRace.html  MathRace.html  calc.c  config.h  extra_collisions.c  font.h  game.c  game.h  graphics.h  keyboard.c  main.c  map.c  map.h  memory.c  memory.h  meson.build  player.c  player.h  run.sh  text.c  text.h  tiles.c  tiles.h  touch.c  worlds.c  worlds.h
src/img/: favicon.h
src/maps/: map1.h  map1_1.h  map1_2.h  map1_3.h  map1_4.h  map2.h  map2_1.h  map2_2.h  map3.h  map3_1.h
tools/: imgconv.py  imgconv_dir.py  imgconv_dir2.py  imgconv_dir_term.py  imgconv_font_term.py  imgconv_lib.py
tools/mapeditor/: index.html
